--- a/public/sass/screen.scss
+++ b/public/sass/screen.scss
@@ -11,27 +11,31 @@ header{
         width:100%;
         overflow: hidden;
         position:absolute;
-            z-index: -1;
+        z-index: -1;
         img{
+            width:100%;
+            height:auto;
+            box-shadow: 0 1px 8px black;
+            //position:fixed;
         }
     }
     h1{
-        @include span-columns(4,10);
+        @include span-columns(3,10);
         position: relative;
+        background-color: #01939A;
         a{
             color:white;
             font-weight: bolder;
             border:none;
             display:inline-block;
-            padding:1em;
+            padding:1em 1em 2em;
         }
         span{
             font-size: 0.6em;
             color: white;
-            text-align: left;
             position:absolute;
             left:1.82em;
-            bottom:0;
+            bottom:1em;
         }
     }
 }
@@ -52,14 +56,15 @@ html{
     font-family: Verdana, Geneva, sans-serif;
     line-height: 1.4em;
     a{
-        color:black;
+        color:white;
         text-decoration: none;
-        border-bottom: 1px dotted black;
+        border-bottom: 1px dotted white;
     }
     a:hover{
-        color:#5DC8CD;
+        color:#FF7600;
     }
     p{
+        color:silver;
         margin-bottom: 0.8em;
     }
 }
@@ -77,7 +82,7 @@ h6      { font-size: 0.75em;}
     padding-top: 2em;
 }
 
-[type="submit"]{
+[type="submit"], .button{
     background-color: #FF7600;
     border:none;
     cursor: pointer;
@@ -89,11 +94,24 @@ h6      { font-size: 0.75em;}
     color:white;
     text-shadow: 0 1px 1px black;
 }
-[type="submit"]:hover{
+[type="submit"]:hover, .button:hover{
 box-shadow: 0 0.5em 0 #01938A;
+color:white;
 }
 
 h1,h2,h3,h4,h5,h6{font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, "AppleGothic", sans-serif; }
+
+section.container{
+    background-color: transparent;
+    padding:0;
+}
+
+section{
+    background-color: rgba(0,0,0,0.8);
+    color:white;
+    padding:0.6em;
+    @include box-sizing(border-box);
+}
 
 
 /////////----------------------------------------------------------------------------------
@@ -210,7 +228,8 @@ nav{
                 display: block;
                 padding: 0.8em;
                 border:none;
-                 background-color: rgba(255,255,255,0.95);
+                color:black;
+                background-color: rgba(255,255,255,0.95);
                 
             }
             a:hover{
@@ -233,16 +252,24 @@ h2{
     margin-left: -0.6em;
     border-left: 0.6em solid #FF7600;
     padding: 0.5em 0;
+    margin-bottom: 1em;
+    background-color: white;
+    color: black;
 }
 
+section h3{
+    background-color: #01939A;
+    color: white;
+    text-align: center;
+    padding:0.6em;
+    margin: 1em 0 0.5em;
+}
+
+// .races{
+//     padding:0;
+// }
+
 .list{
-    h3{
-        background-color: #01939A;
-        color: white;
-        text-align: center;
-        padding:0.6em;
-        margin: 1em 0 0.5em;
-    }
     ul a{
         border:none;
         padding: 0.6em;
@@ -314,26 +341,14 @@ section{
         margin:0 0 1em;
         padding:0 0 0.6em;
         text-align: center;
+        background-color: transparent;
+        color:white;
     }
     label{
         @include span-columns(1.5,4.5);
-        text-align: right;
-        padding:0.35em 0;
-        margin-bottom: 0.6em;
-        @include box-sizing(border-box);
     }
     select{
-        -webkit-appearance: none;
-        -moz-appearance: none;
-        margin:0;
-        font-size: 1em;
-        border:none;
-        border-radius: 0.5em;
-        box-sizing: border-box;
         @include span-columns(3 omega,4.5);
-        padding:0.5em;
-        background: url(../img/down_arrow_select.jpg) no-repeat right #ddd;
-        margin-bottom: 0.6em;
     }
     select:hover{
         cursor:pointer;
@@ -351,7 +366,30 @@ section{
     clear:both;
 }
 
+label{
+    text-align: right;
+    padding:0.35em 0;
+    margin-bottom: 0.6em;
+    @include box-sizing(border-box);
+}
+select{
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    margin:0;
+    font-size: 1em;
+    border:none;
+    border-radius: 0.5em;
+    @include box-sizing(border-box);
+    padding:0.5em;
+    background: url(../img/down_arrow_select.jpg) no-repeat right #ddd;
+    margin-bottom: 0.6em;
+}
+select:hover{
+    cursor:pointer;
+}
+
 [type="text"],[type="password"],textarea{
+    @include box-sizing(border-box);
     -webkit-appearance: none;
         -moz-appearance: none;
     background-color: transparent;
@@ -441,7 +479,96 @@ input[type="date"]{
         }
     }
     a:hover{
-        color:black;
-        background-color: rgb(245,245,245);
+        background-color: rgba(245,245,245,0.1);
+    }
+}
+.news:after{
+    content:"";
+    display:block;
+    clear:both;
+}
+
+
+
+
+/////////----------------------------------------------------------------------------------
+/////////voir course ----------------------------------------------------------------------
+/////////----------------------------------------------------------------------------------
+
+.course:after{
+    content:"";
+    display:block;
+    clear:both;
+}
+
+.course{
+    h3,h4{
+        margin: 1.4em 0 1em;
+    }
+
+    figure {
+     @include span-columns(4,10);
+        img{
+            border: 0.3em solid silver;
+            width:100%;
+        }
+    }
+    .left{
+        @include span-columns(10,10);
+    }
+    form{
+        @include span-columns(8,10);
+        @include box-sizing(border-box);
+        margin-left: 10%;
+        input, textarea{
+            @include span-columns(6 omega,8);
+        }
+        label{
+            @include span-columns(2,8);
+        }
+    }
+}
+
+.info:after{
+    content:"";
+    display:block;
+    clear:both;
+}
+
+.comment{
+    figure{
+        @include span-columns(1,10); 
+    }
+    margin-bottom: 1em;
+}
+
+.comment:after{
+    content:"";
+    display:block;
+    clear:both;
+}
+
+.info li{
+    @include span-columns(6 omega,10);
+    margin-bottom: 1em;
+    span:first-child{
+        text-align: right;
+        background-color: #FF7600;
+        @include span-columns(1,6);
+        border-top-left-radius: 0.5em;
+        border-bottom-left-radius: 0.5em;
+        margin-right:0;
+
+    }
+    span{
+        display:inline-block;
+        padding:0.6em;
+    }
+    span:nth-child(2){
+        background-color:rgb(100,100,100);
+        color:white;
+        border-top-right-radius: 0.5em;
+        border-bottom-right-radius: 0.5em;
+        @include span-columns(4,6);
     }
 }
